--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/sanslogo1.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo1.jfif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SANSKRITI PUBLIC SCHOOL</title>
+    <title>R C INTERNATIONAL SCHOOL</title>
   </head>
   <body>
     <div id="root"></div>
